# jupyter-pdf-report

./: README.md  setup.cfg  setup.py
jupyter_pdf_report/: report.py
