# Author: Nick Zwart
# Date: 2024oct22

[metadata]
name = jupyter-pdf-report
url = https://github.com/nckz/jupyter-pdf-report
description =
author =
author_email = nick.zwart@gmail.com

[options]
setup_requires = setuptools_scm
include_package_data = True
packages = find:

[options.package_data]
* = *.yml, *.md
